unpackaged/main/default/objects/Notification_Log__c/Notification_Log__c.object-meta.xml
<CustomObject>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>