unpackaged/main/default/objects/Notification_Log__c/fields/Http_Error__c.field-meta.xml
<CustomField>
    <fullName>Http_Error__c</fullName>
    <label>Http Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>