unpackaged/main/default/objects/Notification_Log__c/fields/Processed_in_TNE__c.field-meta.xml
<CustomField>
    <fullName>Processed_in_TNE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed in TNE</label>
    <type>Checkbox</type>
</CustomField>