unpackaged/main/default/objects/Notification_Log__c/fields/Processed_in_TNE_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Processed_in_TNE_DateTime__c</fullName>
    <label>Processed in TNE DateTime</label>
    <type>DateTime</type>
</CustomField>