unpackaged/main/default/objects/Notification_Log__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <label>Response Payload</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>