unpackaged/main/default/objects/Notification_Log__c/fields/TNE_ID__c.field-meta.xml
<CustomField>
    <fullName>TNE_ID__c</fullName>
    <description>TNE-generated GUID that uniquely identifies the notification so that TNE can update the notification later once it has been processed (TOCB-1615)</description>
    <externalId>true</externalId>
    <label>TNE ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>