unpackaged/main/default/objects/Notification_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Payload__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Http_Status__c</columns>
    <columns>Http_Error__c</columns>
    <columns>Attempts__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>