unpackaged/main/default/objects/Notification_Log__c/listViews/Failing_Notifications.listView-meta.xml
<ListView>
    <fullName>Failing_Notifications</fullName>
    <columns>NAME</columns>
    <columns>Request_Payload__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Attempts__c</columns>
    <columns>Http_Error__c</columns>
    <columns>Http_Status__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Attempts__c</field>
        <operation>lessThan</operation>
        <value>15</value>
    </filters>
    <label>Failing Notifications</label>
</ListView>