unpackaged/main/default/objects/Notification_Log__c/listViews/My_Notification_Logs.listView-meta.xml
<ListView>
    <fullName>My_Notification_Logs</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Request_Payload__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Processed_in_TNE__c</columns>
    <columns>Processed_in_TNE_DateTime__c</columns>
    <columns>Attempts__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Notification Logs</label>
</ListView>